force-app/main/default/objects/Course__c/fields/Class_Teacher__c.field-meta.xml
<CustomField>
    <fullName>Class_Teacher__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Class Teacher</label>
    <referenceTo>Contact__c</referenceTo>
    <relationshipName>Classes</relationshipName>
    <type>Lookup</type>
</CustomField>