force-app/main/default/objects/Course__c/fields/My_Count__c.field-meta.xml
<CustomField>
    <fullName>My_Count__c</fullName>
    <label>My Count</label>
    <summaryForeignKey>Registration__c.Course__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>