force-app/main/default/objects/Course__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Board__c</columns>
    <columns>Class_Teacher__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>Max_Count__c</columns>
    <columns>Fees__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>